# OpenSRE

./: .gitignore  ATTRIBUTION.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSING.md  Makefile  NOTICE  README.md  SECURITY.md  artifacthub-repo.yml  docker-compose.yml  litellm_config.example.yaml  llms.txt  ruff.toml
sre-agent/: .dockerignore  .gitignore  DEPLOYMENT_QUICK_START.md  Dockerfile  Makefile  README.md  auth.py  config.py  env.example  events.py  git-credential-helper.sh  graph.py  kubeconfig-demo.yaml  langgraph.json  memory_service.py  pyproject.toml  server.py  state.py  test_all_features_e2e.sh  test_e2e_local.py  test_local.py
sre-agent/k8s/: envoy-warmpool-configmap.yaml  install-gvisor-kind.sh  sandbox-template-warmpool-local.yaml  sandbox-template-warmpool.yaml  sandbox-template.yaml  sandbox-warmpool.yaml  service-patcher.yaml  setup-kind.sh
sre-agent/memory/: __init__.py  hints.py  integration.py  models.py  strategy_generator.py
sre-agent/nodes/: __init__.py  coding.py  init_context.py  kg_context.py  memory_lookup.py  memory_store.py  planner.py  subagent_executor.py  synthesizer.py  writeup.py
sre-agent/scripts/: README.md  dev.sh  setup-github-secrets.sh  setup-local.sh  stop-server.sh
sre-agent/tests/: conftest.py  test-local-e2e.sh  test-production.sh  test_agent_integration.py  test_agent_tools.py  test_config_enhanced.py  test_config_extensions.py  test_feedback_loop.py  test_graph_e2e.py  test_init_context.py  test_kg_context.py  test_memory_lookup.py  test_memory_store.py  test_state.py  (+9 more)
(+461 files in other folders)
